tests/positive/MiniC/StdlibImport/Input.juvix
module Input;

-- import from stdlib
open import Stdlib.Data.String;
open import Stdlib.Data.Nat;
open import Stdlib.System.IO;

main : IO;
main := printNatLn (2 + 3);

end;
