tests/negative/issue1700/SelfApplication.juvix
-- self-application
module SelfApplication;

open import Stdlib.Prelude;

main : IO;
main := printNatLn (λ {x := x x} id (3 + 4));

end;
